# Cardiac-Arrest-Risk-Modeling

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: .gitkeep  cardiac_patient_processed.csv
models/: .gitkeep
notebooks/: .gitkeep  01_data_quality_assessment.ipynb  02_exploratory_data_analysis.ipynb  03_baseline_logistic_regression.ipynb  04_statistical_analysis_odds_ratios.ipynb  05_predictive_modeling.ipynb  06_final_model_evaluation.ipynb  07_model_interpretability.ipynb  08_bias_fairness_robustness.ipynb
reports/: data_dictionary.md  final_model_metrics.csv  final_report.md  model_card.md  model_comparison.csv  patient_level_robustness.csv  robustness_checks.csv  subgroup_performance.csv  threshold_analysis.csv
reports/Report CSV's/: baseline_logistic_regression_metrics.csv  data_quality_summary.csv  odds_ratio_results.csv  subgroup_missingness_tests.csv
reports/figures/: .gitkeep
src/: __init__.py  config.py  create_processed_dataset.py  evaluation.py  features.py  modeling.py  preprocessing.py
src/rag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  generator.py  loaders.py  pipeline.py  retriever.py  test_rag_pipeline.py  vector_store.py
tests/: .gitkeep  test_data_pipeline.py
