[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac-arrest-risk-modeling"
version = "0.1.0"
description = "Reproducible workflow for cardiac arrest risk exploratory analysis, statistical and predictive modeling."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

# Pinned for reproducibility. This file is the source of truth for dependencies.
# Versions reflect current stable releases as of mid-2025 (Python 3.11).
dependencies = [
    "pandas==2.2.3",
    "numpy==2.2.6",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "statsmodels==0.14.4",
    "shap==0.47.2",
    "joblib==1.5.1",
    "jupyter==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.13",
    "black==25.1.0",
]

[tool.setuptools]
# The analysis code lives in the importable `src` package. Installing the
# project (`pip install -e .`) makes `from src.config import ...` etc. resolve
# from anywhere, so scripts, tests, and notebooks all share one import style.
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
